# drone-coordinator

./: README.md
Realsense D435/: API_realsense_d435.py  test_realsense_d435.py
landing/: README.md  cameraCalibration.py  createArucoMarker.py  csvv.py  detectMarker.py  imDepth  imLogi  imMac  positionD.py  positionM.py
offboard/: CMakeLists.txt  README.md  offboard.h  offboard_node.cpp  package.xml  takeoff_node.cpp  takeoff_node_draft.cpp  test_case.md
offboard/config/: config.yaml  waypoints.yaml
offboard/include/offboard/: logging.h  offboard.h
offboard/launch/: offboard.launch
offboard/src/: gps_offb.cpp  hover_node.cpp  hovering_node.cpp  logging_lib.cpp  logging_node.cpp  offboard_lib.cpp  offboard_node.cpp  setmode_offb.cpp
offboard_control/: CMakeLists.txt  package.xml
offboard_control/include/offboard_control/: pid_controller_base.h  uav_controller.h
offboard_control/scripts/: MarkerDetection.py  real_cam.py  real_cam_detect.py  real_cam_detect_marker.py  transform.py
offboard_control/src/: fly_to_marker.cpp  fly_uav.cpp  pid_controller_base.cpp  setmode_offb.cpp  test_fly.cpp  test_hover.cpp  testeigen  testeigen.cpp
samples/SSF_MSF/MSF/: README.md
samples/SSF_MSF/MSF/file/: myviconpos_sensor.cpp  plot_relevant
samples/SSF_MSF/SSF/: README.md
samples/SSF_MSF/SSF/file/: CMakeLists.txt  main.cpp  myviconpos_measurements.h  myviconpos_sensor.launch
samples/VIO/VINSMono/: README.md  ceres_install.txt  my_live.launch  my_live_config.yaml  my_live_config_no_extrinsic.yaml  my_live_no_extrinsic_param.launch  vinsmono_tutorial.txt
samples/VIO/maplab/: README.md  maplab.rviz
samples/VIO/rovio/: README.md  rovio_tutorial.txt
samples/VO/SVO/: README.md
samples/VO_VIO/SVO/: README.md
samples/VO_VIO/VINSMono/: README.md
samples/VO_VIO/maplab/: README.md
samples/collision-detection/background-subtraction/: README.md
samples/collision-detection/background-subtraction/octave/: bounding_box.m  read_depth_mat.m  read_depth_mat_v2.m
samples/collision-detection/background-subtraction/python/: motion_detector.py
samples/collision-detection/background-subtraction/python/getdata/: getdata.py  getdata1.py  getdata2.py
samples/collision-detection/background-subtraction/python/motion detection/basic-motion-detection/: a.py  motion_detector.py  motion_detector_v2.py
samples/source/: Untitled Document
samples/source/KimeraVIO_ws/.catkin_tools/profiles/default/: config.yaml
samples/source/KimeraVIO_ws/src/: .rosinstall  .rosinstall.bak
samples/source/KimeraVIO_ws/src/Kimera-VIO-ROS/launch/: my_kimera_vio_ros_euroc.launch
samples/source/KimeraVIO_ws/src/dbow2_catkin/: CMakeLists.txt  LICENSE  README.md  package.xml
samples/source/KimeraVIO_ws/src/disparity_image_proc/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
samples/source/KimeraVIO_ws/src/disparity_image_proc/launch/: disparity_to_depth.launch
samples/source/KimeraVIO_ws/src/disparity_image_proc/src/nodelets/: depth_image.cpp
samples/source/KimeraVIO_ws/src/kimera_rviz_markers/: CMakeLists.txt  README.md  package.xml
samples/source/KimeraVIO_ws/src/kimera_rviz_markers/include/kimera_rviz_markers/: kimera_rviz_markers.h  utils.h
samples/source/KimeraVIO_ws/src/kimera_rviz_markers/launch/: drone_marker_pub.launch  kimera_rviz_markers.launch
samples/source/KimeraVIO_ws/src/kimera_rviz_markers/src/: drone_marker_pub.cpp  kimera_rviz_markers.cpp  utils.cpp
samples/source/KimeraVIO_ws/src/opengv_catkin/: CMakeLists.txt  README.md  package.xml
samples/source/MSF_ROVIO_ws/.catkin_tools/profiles/default/: devel_collisions.txt
samples/source/MSF_ROVIO_ws/src/: README.md
samples/source/MSF_ROVIO_ws/src/ethzasl_msf/msf_updates/: my_pose_sensor_fix_MH_01.yaml
samples/source/MSF_ROVIO_ws/src/msf_plotting_utility/: my_plot_3d_rovio.py  my_plot_overtime_GPS_PX4.py  my_plot_overtime_GPS_Vicon.py  my_plot_overtime_GPS_and_rovio.py  my_plot_overtime_conig_rovio_groundtruth_origin.py  my_plot_overtime_msf.py  my_plot_overtime_msf_and_GPS.py  my_plot_overtime_msf_and_GPS_V2.py  my_plot_overtime_msf_and_GPS_V3.py  my_plot_overtime_msf_and_GPS_v1.py  my_plot_overtime_rovio.py  my_plot_xy_rovio.py  my_pyplot_rosbag_all_X_axis_V2_confirmed.py  my_pyplot_rosbag_all_Y_axis_V2_confirmed.py  my_pyplot_rosbag_all_Z_axis_V2_confirmed.py  my_pyplot_rosbag_all_with_groundtruth_V1.py  my_pyplot_rosbag_rovio_only_V3.py  my_pyplot_rosbag_rovio_only_confirmed.py  plot_comparison.sh  plot_init.sh  pyplot_rosbag.py  pyplot_rosbag_3D.py  pyplot_rosbag_3D_animated.py  pyplot_rosbag_3D_diff.py  pyplot_rosbag_error.py  pyplot_rosbag_positions.py  pyplot_rosbag_positions_multi.py  record_all.sh  record_msf_and_rovio.sh  record_msf_only.sh  record_rovio_only.sh  visualdata.py
samples/source/MSF_ROVIO_ws/src/rovio/cfg/: my_cam.yaml  my_cam_v2.yaml  my_d435.info  my_d435_v2.info  my_d435_v3.info  my_rovio.info_new  rovio_13_17.info  rovio_13_17_v2.info  rovio_18_20.info  rovio_realtime_pararel.info
samples/source/MSF_ROVIO_ws/src/rovio/launch/: my_rovio_rosbag_node.launch
samples/source/MSF_ROVIO_ws/src/subpub/: CMakeLists.txt  README.md
samples/source/MSF_ROVIO_ws/src/subpub/src/: target_pub.cpp
samples/source/aloam_ws/src/A-LOAM/launch/: kitti_helper.launch  my_aloam_campus.launch
samples/source/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
samples/source/catkin_ws/src/subpub/: my_pose_realdata.launch  package.xml
samples/source/convertmsg_ws/src/: target_pub.cpp
samples/source/first_ws/.catkin_tools/profiles/default/: devel_collisions.txt
samples/source/first_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
samples/source/first_ws/src/beginner_tutorials/src/: listener.cpp  talker.cpp
samples/source/kalibr_ws/.catkin_tools/profiles/default/: devel_collisions.txt
samples/source/loam_kitti_ws/src/loam_velodyne_kitti_ros/: CMakeLists.txt
samples/source/rovio_ws_v2/src/: my_pyplot_rosbag_positions.py  record_all.sh
sensors/: README.md  realsense2.py  test_realsense2.py  update_rate_imu.md
(+90 files in other folders)
