<?xml version="1.0"?>
<package format="2">
  <name>dbow2_catkin</name>
  <version>0.0.1</version>
  <description>DBoW2 catkin wrapper</description>
  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>opencv3_catkin</depend>

</package>