<?xml version="1.0"?>
<package format="2">
  <name>kimera_rviz_markers</name>
  <version>0.0.0</version>
  <description>RVIZ markers for better visualization</description>

  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>

</package>
